tooling/nargo_cli/tests/snapshots/execution_failure/brillig_mem_layout_regression/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Stack too deep
   ┌─ src/main.nr:44:15
   │
44 │     } else if func_1(b, ctx_limit) {
   │               --------------------
   │
   = Call stack:
     1: main
             at src/main.nr:9:16
     ┌─ 2: func_1
     │          at src/main.nr:44:15
     └─ (repeated 2363 times)

Failed assertion
